--- a/style.css
+++ b/style.css
@@ -49,18 +49,18 @@ input[type="checkbox"]:disabled {
 
 .container {
   width: 100%;
-  max-width: 600px; /* Restricts container width */
+  max-width: 800px; 
   padding: 1px;
 }
 
 .todo-app_card {
-  background-color: #ffffff; /* Ensures card has a visible background */
+  background-color: #ffffff; 
   backdrop-filter: blur(8px);
   box-shadow: 0px 10px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
   padding: 2rem;
-  margin: 0 auto; /* Centers the card horizontally */
+  margin: 0 auto; 
 }
 
 .container__header {
